# dbt-cloud-mesh-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/dbt_cloud_mesh_demo/components/: dbt_cloud_mesh_component.py
src/dbt_cloud_mesh_demo/defs/: dbt_cloud_state_refresh_sensor.py  dbt_cloud_triggered_assets_example.py  run_monitor.py
src/dbt_cloud_mesh_demo/defs/.local_defs_state/: .gitignore
src/dbt_cloud_mesh_demo/defs/.local_defs_state/DbtCloudComponent__100001-200001__/: state
src/dbt_cloud_mesh_demo/defs/.local_defs_state/DbtCloudComponent__100002-200002__/: state
src/dbt_cloud_mesh_demo/defs/gold_cloud/: defs.yaml
src/dbt_cloud_mesh_demo/defs/silver_cloud/: defs.yaml
tests/: test_dbt_cloud_mesh_component.py
